public class Main {

  public static void main(String[] args) {

    Frame f = new Frame();

  }
}
